feat: add OWASP ZAP MCP tool for web application vulnerability scanning

--- a/.github/workflows/build-publish.yaml
+++ b/.github/workflows/build-publish.yaml
@@ -94,6 +94,8 @@ jobs:
               - 'tools/web-session/**'
             wpscan:
               - 'tools/wpscan/**'
+            zap:
+              - 'tools/zap/**'
 
       - name: Filter out mcp-common from tools list
         id: filter-tools
@@ -185,7 +187,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        tool: [curl, cve-lookup, enum4linux-ng, exploit-runner, ffuf, ftp, hash-lookup, hydra, john, lfi-rfi, metasploit, mongodb, mysql, netcat, nikto, nmap, nosqlmap, nuclei, payload, privesc, searchsploit, sqlite, sqlmap, ssh, tunnel, web-fingerprint, web-session, wpscan]
+        tool: [curl, cve-lookup, enum4linux-ng, exploit-runner, ffuf, ftp, hash-lookup, hydra, john, lfi-rfi, metasploit, mongodb, mysql, netcat, nikto, nmap, nosqlmap, nuclei, payload, privesc, searchsploit, sqlite, sqlmap, ssh, tunnel, web-fingerprint, web-session, wpscan, zap]
 
     permissions:
       contents: read
