--- a/registry.yaml
+++ b/registry.yaml
@@ -703,6 +703,218 @@ tools:
             type: object
             description: "Count of findings grouped by severity"
 
+  zap:
+    name: zap
+    version: "2.14"
+    description: "OWASP ZAP - web application security scanner with active vulnerability detection, spidering, and automated testing"
+    image: "ghcr.io/silicon-works/mcp-tools-zap:latest"
+    image_size_mb: 1200
+
+    capabilities:
+      - web_vulnerability_scanning
+      - active_scanning
+      - spider_crawling
+      - xss_detection
+      - sqli_detection
+      - security_assessment
+
+    # Routing hints for tool selection
+    routing:
+      use_for:
+        - "web application scanning"
+        - "active vulnerability scanning"
+        - "finding XSS vulnerabilities"
+        - "finding SQL injection"
+        - "automated web security testing"
+        - "crawling web applications"
+        - "OWASP Top 10 testing"
+      never_use_for:
+        - "port scanning"
+        - "network scanning"
+        - "password cracking"
+      prefer_over:
+        - "nikto"  # ZAP has active scanning, nikto is passive
+        - "curl"   # For security testing, use ZAP not manual curl
+
+    phases:
+      - enumeration
+      - exploitation
+
+    requirements:
+      network: true
+      privileged: false
+
+    resources:
+      memory_mb: 2048
+      cpu: 2.0
+
+    methods:
+      spider:
+        description: "Crawl a target URL to discover all pages and endpoints"
+        when_to_use: "To discover all URLs on a web application before scanning"
+        params:
+          target:
+            type: string
+            required: true
+            description: "Target URL to crawl (e.g., http://target.com)"
+          max_depth:
+            type: integer
+            default: 5
+            description: "Maximum crawl depth"
+          wait:
+            type: boolean
+            default: true
+            description: "Wait for spider to complete"
+        returns:
+          urls:
+            type: array
+            description: "Discovered URLs"
+
+      active_scan:
+        description: "Actively scan a target for vulnerabilities (SQLi, XSS, etc.)"
+        when_to_use: "To test a web application for security vulnerabilities"
+        params:
+          target:
+            type: string
+            required: true
+            description: "Target URL to scan"
+          wait:
+            type: boolean
+            default: true
+            description: "Wait for scan to complete"
+        returns:
+          alerts:
+            type: array
+            description: "Discovered vulnerabilities grouped by severity"
+
+      quick_scan:
+        description: "Perform a complete scan: spider the target then run active scan"
+        when_to_use: "For a comprehensive security assessment of a web application"
+        params:
+          target:
+            type: string
+            required: true
+            description: "Target URL to scan"
+          max_depth:
+            type: integer
+            default: 5
+            description: "Maximum spider depth"
+        returns:
+          summary:
+            type: object
+            description: "Scan results with vulnerability counts by severity"
+
+      get_alerts:
+        description: "Get vulnerabilities discovered by ZAP"
+        when_to_use: "To retrieve detailed vulnerability information after scanning"
+        params:
+          target:
+            type: string
+            description: "Filter alerts by target URL (optional)"
+          risk:
+            type: string
+            description: "Filter by risk level: High, Medium, Low, Informational"
+          limit:
+            type: integer
+            default: 100
+            description: "Maximum number of alerts to return"
+        returns:
+          alerts:
+            type: array
+            description: "List of vulnerabilities with details"
+
+      get_urls:
+        description: "Get all URLs discovered by the spider"
+        when_to_use: "To see what pages were found during crawling"
+        params:
+          target:
+            type: string
+            description: "Filter URLs by base URL (optional)"
+        returns:
+          urls:
+            type: array
+            description: "List of discovered URLs"
+
+      scan_status:
+        description: "Get the status of running scans"
+        when_to_use: "To check progress of background scans"
+        params: {}
+        returns:
+          spider_status:
+            type: string
+            description: "Spider completion percentage"
+          scan_status:
+            type: string
+            description: "Active scan completion percentage"
+
+      summary:
+        description: "Get a summary of all findings by risk level"
+        when_to_use: "To get an overview of discovered vulnerabilities"
+        params:
+          target:
+            type: string
+            description: "Filter by target URL (optional)"
+        returns:
+          total:
+            type: integer
+            description: "Total number of issues"
+          by_risk:
+            type: object
+            description: "Issue counts by risk level"
+
+      proxy_history:
+        description: "Get HTTP messages captured by ZAP proxy"
+        when_to_use: "To review traffic that passed through the proxy"
+        params:
+          start:
+            type: integer
+            default: 0
+            description: "Start index"
+          count:
+            type: integer
+            default: 50
+            description: "Number of messages to return"
+          target:
+            type: string
+            description: "Filter by target URL (optional)"
+        returns:
+          messages:
+            type: array
+            description: "List of HTTP request/response pairs"
+
+      send_request:
+        description: "Send an HTTP request through ZAP and get the response (like Burp Repeater)"
+        when_to_use: "To manually send or replay HTTP requests for testing"
+        params:
+          request:
+            type: string
+            required: true
+            description: "Raw HTTP request (headers and body)"
+          target:
+            type: string
+            required: true
+            description: "Target URL (e.g., https://target.com)"
+          follow_redirects:
+            type: boolean
+            default: true
+            description: "Follow HTTP redirects"
+        returns:
+          response:
+            type: string
+            description: "HTTP response headers and body"
+
+      proxy_info:
+        description: "Get ZAP proxy connection info for routing traffic through ZAP"
+        when_to_use: "To get proxy configuration details for browser setup"
+        params: {}
+        returns:
+          port:
+            type: integer
+            description: "Proxy port number"
+          instructions:
+            type: string
+            description: "Setup instructions"
+
   enum4linux-ng:
     name: enum4linux-ng
     version: "1.3"
