feat(office-exploit): add MCP server for malicious Office document generation
Create malicious XLSX, DOCX, PPTX files for authorized security testing:
- XSS via sheet names (CVE-2025-22131)
- XXE injection with OOB/file read/SSRF styles
- Formula injection (DDE, HYPERLINK)
- External links and images for SSRF
- Template injection (remote and Follina/MSDT)
- PPTX action links (hover/click triggers)

Includes low-level XML manipulation and extraction utilities.

--- a/.github/workflows/build-publish.yaml
+++ b/.github/workflows/build-publish.yaml
@@ -74,6 +74,8 @@ jobs:
               - 'tools/nosqlmap/**'
             nuclei:
               - 'tools/nuclei/**'
+            office-exploit:
+              - 'tools/office-exploit/**'
             payload:
               - 'tools/payload/**'
             privesc:
@@ -199,7 +201,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        tool: [curl, cve-lookup, enum4linux-ng, exploit-runner, ffuf, ftp, hash-lookup, hydra, ike-scan, john, lfi-rfi, metasploit, mongodb, mysql, netcat, nikto, nmap, nosqlmap, nuclei, payload, playwright, privesc, scapy, searchsploit, shell-session, sqlite, sqlmap, ssh, strongswan, target-tracker, tunnel, web-fingerprint, web-session, wpscan, zap]
+        tool: [curl, cve-lookup, enum4linux-ng, exploit-runner, ffuf, ftp, hash-lookup, hydra, ike-scan, john, lfi-rfi, metasploit, mongodb, mysql, netcat, nikto, nmap, nosqlmap, nuclei, office-exploit, payload, playwright, privesc, scapy, searchsploit, shell-session, sqlite, sqlmap, ssh, strongswan, target-tracker, tunnel, web-fingerprint, web-session, wpscan, zap]
 
     permissions:
       contents: read
