feat(netcat): add HTTP server, UDP support, and non-blocking listeners
- Add http_listen for hosting files and capturing requests (XSS/CSRF scenarios)
- Add http_requests to retrieve captured HTTP requests with query params, headers, body
- Add http_file for dynamic file management on running servers
- Add udp_listen, udp_packets, udp_send for UDP packet capture
- Add non-blocking TCP listeners with listener_status, listener_read, listener_write
- Add TLS/HTTPS support with auto-generated self-signed certificates
- Add session directory persistence for large request volumes (>50 requests)
- Add port validation (1-65535) to prevent OverflowError crashes
- Update registry.yaml with all 16 methods and routing triggers

--- a/tools/netcat/Dockerfile
+++ b/tools/netcat/Dockerfile
@@ -1,5 +1,6 @@
 # OpenSploit MCP Server: netcat
-# Network utility for reverse shells, bind shells, and port testing
+# Network utility for reverse shells, HTTP capture, and port testing
+# v2.0.0 - Added HTTP server, UDP support, non-blocking listeners
 
 FROM kalilinux/kali-rolling
 
@@ -7,7 +8,10 @@ LABEL org.opencontainers.image.source="https://github.com/silicon-works/mcp-tool
 LABEL org.opencontainers.image.description="netcat MCP server for OpenSploit"
 LABEL org.opencontainers.image.licenses="MIT"
 
-# Install netcat variants, socat, and Python
+# Install system dependencies
+# - netcat/ncat/socat for fallback operations
+# - iproute2 for interface discovery
+# - Python for MCP server
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
         netcat-traditional \
@@ -31,12 +35,15 @@ ENV PATH="/app/venv/bin:$PATH"
 COPY packages/mcp-common /app/packages/mcp-common
 RUN pip install --no-cache-dir /app/packages/mcp-common
 
-# Install tool-specific dependencies
+# Install tool-specific dependencies (aiohttp, cryptography)
 COPY tools/netcat/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy MCP server code
 COPY tools/netcat/mcp-server.py .
+
+# Create session directory mount point
+RUN mkdir -p /session/netcat
 
 # MCP servers communicate via stdio
 CMD ["python3", "mcp-server.py"]
